--- a/WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,28 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="fas fa-user mr-2"></span>Mi Cuenta
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Mi Perfil</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href='javascript:document.logoutForm.submit();'>Cerrar sesion</a>
+            </div>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Iniciar sesión</a>
+        </li>
+        <li class="nav-item">
+            <a asp-area="" asp-controller="Account" asp-action="Register" class="nav-link">Crear cuenta</a>
+        </li>
+    }
+
 </ul>
