--- a/WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -4,16 +4,25 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="fas fa-user mr-2"></span>Mi Cuenta
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="fas fa-user mr-2"></span> Mi Cuenta
+        </a>
+
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            @if (User.IsInRole("Admin"))
+            {
+                <a class="dropdown-item" asp-controller="Dashboard" asp-action="Index">
+                    Dashboard
+                </a>
+            }
+            <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">
+                Mi Perfil
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Mi Perfil</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href='javascript:document.logoutForm.submit();'>Cerrar sesion</a>
-            </div>
-        </li>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href='javascript:document.logoutForm.submit();'>Cerrar sesion</a>
+        </div>
+    </li>
     }
     else
     {
