--- a/WebApplication/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/_LayoutAdmin.cshtml
@@ -28,7 +28,9 @@
     <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm" name="logoutForm"></form>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home">
+                <img src="https://www.zipcar.com/themes/custom/zipcar_base/logo.svg" height="35">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
