--- a/WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -27,10 +27,10 @@
     else
     {
         <li class="nav-item">
-            <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Iniciar sesión</a>
+            <a asp-area="" asp-controller="Account" asp-action="Login" class="btn btn-light">Iniciar sesión</a>
         </li>
         <li class="nav-item">
-            <a asp-area="" asp-controller="Account" asp-action="Register" class="nav-link">Crear cuenta</a>
+            <a asp-area="" asp-controller="Account" asp-action="Register" class="btn btn-primary">Crear cuenta</a>
         </li>
     }
 
