--- a/WebApplication/Views/Account/Login.cshtml
+++ b/WebApplication/Views/Account/Login.cshtml
@@ -9,9 +9,9 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
+<div class="row justify-content-center mt-5">
     <div class="col-md-4">
+        <h2>@ViewData["Title"]</h2>
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Iniciar sesión.</h4>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
                 </div>
             </form>
         </section>
