--- a/WebApplication/Views/Account/Register.cshtml
+++ b/WebApplication/Views/Account/Register.cshtml
@@ -1,12 +1,12 @@
 ﻿@model RegisterViewModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrarse";
 }
 
-<h2>@ViewData["Title"]</h2>
 
-<div class="row">
+<div class="row justify-content-center mt-5">
     <div class="col-md-4">
+        <h2>@ViewData["Title"]</h2>
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
             <h4>Crear cuenta.</h4>
             <hr />
@@ -46,7 +46,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Registrarse</button>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
         </form>
     </div>
 </div>
