Se agrega manejo de reservacion

--- a/WebApplication/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/_LayoutAdmin.cshtml
@@ -76,6 +76,11 @@
                             </a>
                         </li>
                         <li class="nav-item item-sidebar">
+                            <a asp-controller="Reservations" asp-action="Index" class="nav-link">
+                                <span class="fas fa-flag"></span><span class=" ml-2">Reservaciones</span>
+                            </a>
+                        </li>
+                        <li class="nav-item item-sidebar">
                             <a asp-controller="Cars" asp-action="Index" class="nav-link">
                                 <span class="fas fa-flag"></span><span class=" ml-2">Reportes sin resolver</span>
                             </a>
