--- a/WebApplication/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/_LayoutAdmin.cshtml
@@ -81,8 +81,8 @@
                             </a>
                         </li>
                         <li class="nav-item item-sidebar">
-                            <a asp-controller="Cars" asp-action="Index" class="nav-link">
-                                <span class="fas fa-flag"></span><span class=" ml-2">Reportes sin resolver</span>
+                            <a asp-controller="Reports" asp-action="Index" class="nav-link">
+                                <span class="fas fa-flag"></span><span class=" ml-2">Reportes</span>
                             </a>
                         </li>
                     </ul>
