Se agrega gestor de usuarios

--- a/WebApplication/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/_LayoutAdmin.cshtml
@@ -92,7 +92,7 @@
                     </h6>
                     <ul class="nav flex-column mt-2">
                         <li class="nav-item item-sidebar">
-                            <a asp-controller="Parkings" asp-action="Index" class="nav-link">
+                            <a asp-controller="UserManager" asp-action="Index" class="nav-link">
                                 <span class="fas fa-parking"></span><span class=" ml-2">Gestion</span>
                             </a>
                         </li>
