--- a/WebApplication/Views/Reservations/Create.cshtml
+++ b/WebApplication/Views/Reservations/Create.cshtml
@@ -9,7 +9,7 @@
 <h5>@car.Year</h5>
 <hr />
 <div class="row">
-    <div class="col-3 mb-3">
+    <div class="col-lg-3 mb-3">
         @if (string.IsNullOrWhiteSpace(car.Picture))
         {
             <img src="https://via.placeholder.com/600" class="img-fluid img-thumbnail" />
