--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -2,7 +2,70 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@section Jumbotron {
+    <img src="~/jumbotron.png" class="img-fluid" />
+
+    <div class="container my-5">
+        <div class="text-center mb-5">
+            <h4 class="display-3">Todos los autos que necesites</h4>
+            <h6 class="lead">Renta el auto perfecto para ti gracias a nuestro amplio catalogo de autos</h6>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="text-center mb-4">
+                    <img src="https://media2.zipcar.com/drupal-presales/column-section/ic-drive-wheel_0_0.svg" />
+                </div>
+                <h5 class="text-center">Seguros</h5>
+                <p class="text-center">Carros seguros pensados en la seguridad de nuestros clientes</p>
+            </div>
+            <div class="col-lg-4  mb-4">
+                <div class="text-center mb-4">
+                    <img src="https://media2.zipcar.com/drupal-presales/column-section/ic-map_0.svg" />
+                </div>
+                <h5 class="text-center">Catalogo amplio</h5>
+                <p class="text-center">Catalogo de mas de 6000 carros disponibles para rentar</p>
+            </div>
+            <div class="col-lg-4  mb-4">
+                <div class="text-center mb-4">
+                    <img src="https://media2.zipcar.com/drupal-presales/column-section/ic-saving_0.svg" />
+                </div>
+                <h5 class="text-center">Ahorra dinero</h5>
+                <p class="text-center">Ahorra dinero al rentar carros en Zip Cart gracias a nuestros precios bajos</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid bg-primary text-white p-3">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-lg-7 mb-3">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="~/carro-1.png" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="~/carro-2.png" class="d-block w-100">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-5 mb-3">
+                    <h2>Amplio catalogo de autos</h2>
+                    <p class="lead">
+                        Gracias a nuestro amplio catalogo de autos, encontrar el auto ideal para ti nunca habia sido tan facil.
+                        Filtra entra las distintas marcas y a&ntildeos para encontrar la mejor eleccion para ti.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+}
