--- a/WebApplication/Views/UserManager/Index.cshtml
+++ b/WebApplication/Views/UserManager/Index.cshtml
@@ -48,7 +48,7 @@
                     @Html.DisplayFor(modelItem => item.Identification)
                 </td>
                 <td>
-                    <a asp-controller="Reservations" asp-action="Index" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary"><span class="fas fa-eye"></span> Ver reservas</a>
+                    <a asp-controller="Reservations" asp-action="Index" asp-route-applicationUserId="@item.Id" class="btn btn-sm btn-outline-primary"><span class="fas fa-eye"></span> Ver reservas</a>
                 </td>
             </tr>
         }
